# Python-Charmers

./: .gitignore  MANIFEST.in  README.md  _conf.py  _rename.py  console_scripts.txt  mkdocs.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: execute_python_package.yml  python-package.yml  upload_python_package-poetry.yml  upload_python_package-setup.py.yaml  upload_python_package-setup.py.yml  upload_python_package.yml  upload_python_package_poetry.yml  upload_python_package_setup.py.yml
.github/workflows-bin/: install-dependencies.sh  setup-chromedriver.sh
docker/: Dockerfile  Makefile  README.md  docker-compose.yml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pycharmers.api.github.html  pycharmers.api.google_drive.html  pycharmers.api.html  pycharmers.api.mysql.html  pycharmers.api.slack.html  pycharmers.api.trello.html  pycharmers.cli.book2img.html  pycharmers.cli.cvCanny.html  pycharmers.cli.cvCascades.html  pycharmers.cli.cvPaperScanner.html  pycharmers.cli.cvPencilSketch.html  pycharmers.cli.cvWindow.html  pycharmers.cli.form_auto_fill_in.html  pycharmers.cli.html  pycharmers.cli.image2pptx.html  pycharmers.cli.jupyter_arrange.html  pycharmers.cli.lyricVideo.html  pycharmers.cli.openBrowser.html  pycharmers.cli.pdfmine.html  pycharmers.cli.regexp_replacement.html  pycharmers.cli.render_template.html  pycharmers.cli.requirements.html  pycharmers.cli.revise_text.html  pycharmers.cli.show.html  pycharmers.cli.tweetile.html  pycharmers.cli.video2gif.html  pycharmers.cli.video_of_lyric.html  pycharmers.cli.video_of_typing.html  pycharmers.html  pycharmers.matplotlib.cmaps.html  pycharmers.matplotlib.html  pycharmers.matplotlib.layout.html  pycharmers.matplotlib.plot2d.html  pycharmers.matplotlib.plot3d.html  (+61 more)
docs/_modules/: index.html
docs/_sources/: index.rst.txt  modules.rst.txt  pycharmers.api.github.rst.txt  pycharmers.api.google_drive.rst.txt  pycharmers.api.mysql.rst.txt  pycharmers.api.rst.txt  pycharmers.api.slack.rst.txt  pycharmers.api.trello.rst.txt  pycharmers.cli.book2img.rst.txt  pycharmers.cli.cvCanny.rst.txt  pycharmers.cli.cvCascades.rst.txt  pycharmers.cli.cvPaperScanner.rst.txt  pycharmers.cli.cvPencilSketch.rst.txt  pycharmers.cli.cvWindow.rst.txt  pycharmers.cli.form_auto_fill_in.rst.txt  pycharmers.cli.image2pptx.rst.txt  pycharmers.cli.jupyter_arrange.rst.txt  pycharmers.cli.lyricVideo.rst.txt  pycharmers.cli.openBrowser.rst.txt  pycharmers.cli.pdfmine.rst.txt  pycharmers.cli.regexp_replacement.rst.txt  pycharmers.cli.render_template.rst.txt  pycharmers.cli.requirements.rst.txt  pycharmers.cli.revise_text.rst.txt  pycharmers.cli.rst.txt  pycharmers.cli.show.rst.txt  pycharmers.cli.tweetile.rst.txt  pycharmers.cli.video2gif.rst.txt  pycharmers.cli.video_of_lyric.rst.txt  pycharmers.cli.video_of_typing.rst.txt  pycharmers.matplotlib.cmaps.rst.txt  pycharmers.matplotlib.layout.rst.txt  pycharmers.matplotlib.plot2d.rst.txt  pycharmers.matplotlib.plot3d.rst.txt  pycharmers.matplotlib.rst.txt  pycharmers.opencv.backsub.rst.txt  pycharmers.opencv.binary.rst.txt  pycharmers.opencv.cascade.rst.txt  pycharmers.opencv.cvui.rst.txt  pycharmers.opencv.drawing.rst.txt  (+55 more)
docs/_static/: custom.css  custom.js
docs/doctrees/: environment.pickle  index.doctree  pyutils.doctree  pyutils.matplotlib.doctree  pyutils.utils.doctree
docs/html/: .buildinfo  objects.inv  pyutils.html  pyutils.matplotlib.html  pyutils.utils.html
examples/: sample.ipynb
pycharmers/: __init__.py  __meta__.py
pycharmers/api/: __init__.py  _base.py  github.py  google_drive.py  mysql.py  slack.py  trello.py
pycharmers/cli/: __init__.py  _clipath.py  _path.py  book2img.py  cvCanny.py  cvCascades.py  cvPaperScanner.py  cvPencilSketch.py  cvWindow.py  form_auto_fill_in.py  image2pptx.py  jupyter_arrange.py  lyricVideo.py  openBrowser.py  pdfmine.py  regexp_replacement.py  render_template.py  requirements.py  revise_text.py  show.py  tweetile.py  video2gif.py  video_of_lyric.py  video_of_typing.py
pycharmers/matplotlib/: __init__.py  cmaps.py  layout.py  plot2d.py  plot3d.py
pycharmers/opencv/: __init__.py  _cvpath.py  _path.py  backsub.py  binary.py  cascade.py  cvui.py  drawing.py  editing.py  morphology.py  project.py  tracking.py  video_image_handler.py  windows.py
pycharmers/sdk/: __init__.py  _base.py  base.py  github.py  google_drive.py  mysql.py  slack.py  sqlite.py  trello.py
pycharmers/templates/: base.html  def.html  fonts.html  style.html
pycharmers/utils/: __init__.py  _colorings.py  _exceptions.py  _path.py  _warnings.py  argparse_utils.py  audio_utils.py  color_utils.py  download_utils.py  driver_utils.py  environ_utils.py  generic_utils.py  inspect_utils.py  json_utils.py  monitor_utils.py  numpy_utils.py  pil_utils.py  (+7 more)
pyutils/: __init__.py
tests/: _generate.py  _generate_all_templates.py  conftest.py  data.py
{{ MODULE_NAME }}/: __init__.py  cli.py
(+139 files in other folders)
