[tool.poetry]
name = "pycharmers"
version = "0.1.0"
description = "A collection of useful python programs."
authors = ["iwasakishuto <cabernet.rock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
requests = "^2.25.1"
Pillow = "^8.2.0"
beautifulsoup4 = "^4.9.3"
numpy-stl = "^2.16.0"
PyMuPDF = "^1.18.13"
wcwidth = "^0.2.5"
camelot-py = "^0.8.2"
python-xlib = "^0.29"
PyAutoGUI = "^0.9.52"
scipy = "1.4.1"
selenium = "^3.141.0"
Jinja2 = "^2.11.3"
opencv-contrib-python = "^4.5.2"
moviepy = "^1.0.3"
lxml = "^4.6.3"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
isort = "^5.8.0"
mypy = "^0.812"
black = "^21.5b1"

[tool.poetry.scripts]
book2img            = "pycharmers.cli.book2img:book2img"
cv-cascades         = "pycharmers.cli.cvCascades:cvCascades"
cv-paper-scanner    = "pycharmers.cli.cvPaperScanner:cvPaperScanner"
cv-pencil-sketch    = "pycharmers.cli.cvPencilSketch:cvPencilSketch"
cv-window           = "pycharmers.cli.cvWindow:cvWindow"
lyricVideo          = "pycharmers.cli.lyricVideo:lyricVideo"
form-auto-fill-in   = "pycharmers.cli.form_auto_fill_in:form_auto_fill_in"
openBrowser         = "pycharmers.cli.openBrowser:openBrowser"
pdfmine             = "pycharmers.cli.pdfmine:pdfmine"
regexp-replacement  = "pycharmers.cli.regexp_replacement:regexp_replacement"
render-template     = "pycharmers.cli.render_template:render_template"
requirements-create = "pycharmers.cli.requirements:requirements_create"
pycharmers-show     = "pycharmers.cli.show:show_command_line_programs"
tweetile            = "pycharmers.cli.tweetile:tweetile"
video2gif           = "pycharmers.cli.video2gif:video2gif"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
